Fix : Z-index of main area

--- a/styles/Common.module.css
+++ b/styles/Common.module.css
@@ -1,6 +1,8 @@
 /* This CSS module file is for common css that is to be used accross the site*/
 
 .container {
+    z-index: 1;
+    position: relative;
     width: 80vw;
     height: 90vh;
     padding: 0;
@@ -14,6 +16,8 @@
     margin: 0;
 }
 .verticalContainer {
+    z-index: 1;
+    position: relative;
     width: 80vw;
     height: 80vh;
     padding: 0;
@@ -29,6 +33,8 @@
 }
 
 .centerContainer {
+    z-index: 1;
+    position: relative;
     width: 80vw;
     height: 90vh;
     padding: 0;
